<resources>
    <string name="app_name">HouzChef</string>
    <string name="share_key">key_share</string>

    <string name="facebook_app_id">180929429272680<!--618062605193797--></string>
    <string name="fb_login_protocol_scheme">fb180929429272680<!--fb618062605193797--></string>

    <!-- Toast message -->
    <string name="toast_login_fail">Login failed</string>
    <string name="snack_bar_no_internet">Please check internet connection</string>
    <string name="image_permission_txt">Without storage permission we are unable to get Image file.</string>
    <string name="location_permission_txt">Without location permission we are unable to get current location.</string>
    <string name="msg_gps_setting_prompt"> Unable to get the current location .Please turn on GPS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_up">SIGN UP</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="favorite">Favorite</string>
    <string name="notification">Notification</string>
    <string name="my_order">My Order</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>

    <string name="quantity_prompt">Quantity</string>
    <string name="tag_quantity">quantity</string>
    <string name="tag_promo_code">PromoCode</string>
    <string name="my_address">My Address</string>
    <string name="completed">Completed</string>
    <string name="proceed">PROCEED</string>
    <string name="rewards">Rewards</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="change_password">Change Password</string>
    <string name="my_profile">My Profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="alert_me_when_new_recipe_added">Alert me when new recipe added</string>
    <string name="invite_msg">Neque porro quisquam dolorem ipsum\n qua dolor sit amet, conctetur.</string>
    <string name="term_and_condition">Term and Condition</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="about_us">About Us</string>
    <string name="notifications">Notifications</string>
    <string name="my_addresses">My Addresses</string>
    <string name="contact_us">Contact Us</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="pls_enter_current_password">Please enter current password</string>
    <string name="pls_enter_new_password">Please enter new password</string>
    <string name="pls_enter_confirm_password">Please enter confirm password</string>
    <string name="both_password_not_same">Both password are not same</string>
    <string name="psw_not_change">Password not change, Please try again!!</string>
    <string name="pls_enter_fname">Please enter first name</string>
    <string name="pls_enter_last_name">Please enter last name</string>
    <string name="pls_enter_phone_number">Please enter phone number</string>
    <string name="pls_enter_email">Please enter email id</string>
    <string name="add_profile_image">Add Profile Picture</string>
    <string name="capture_options_lbl">Capture image via given options</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="coppied">Coppied</string>
    <string-array name="array_quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string name="sort_by">Sort by</string>
    <string name="rating">Rating</string>
    <string name="price_low_to_high">Price low to high</string>
    <string name="price_high_to_low">Price high to low</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="filter">Filter</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non-Veg</string>
    <string name="both">Both</string>
    <string name="indian">Indian</string>
    <string name="italian">Italian</string>
    <string name="mexican">Mexican</string>
    <string name="chinese">Chinese</string>
    <string name="punjabi">Punjabi</string>
    <string name="reset">RESET</string>
    <string name="apply">APPLY</string>
</resources>
