<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/bg_rounded_white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/color_545454"
        android:padding="@dimen/_10sdp"
        android:text="@string/sort_by"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/color_cccccc" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:drawablePadding="@dimen/_15sdp"
        android:drawableLeft="@drawable/ic_star_red"
        android:textColor="@color/color_f04937"
        android:text="@string/rating"/>

    <TextView
        android:id="@+id/tvPriceLowHigh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:drawablePadding="@dimen/_15sdp"
        android:drawableLeft="@drawable/ic_price_low_high"
        android:textColor="@color/color_777777"
        android:text="@string/price_low_to_high"/>

    <TextView
        android:id="@+id/tvPriceHighLow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:drawablePadding="@dimen/_15sdp"
        android:drawableLeft="@drawable/ic_price_high_low"
        android:textColor="@color/color_777777"
        android:text="@string/price_high_to_low"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/color_cccccc" />

    <TextView
        android:id="@+id/tvDeliveryTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:drawablePadding="@dimen/_15sdp"
        android:drawableLeft="@drawable/ic_delivery_time"
        android:textColor="@color/color_777777"
        android:text="@string/delivery_time"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/color_cccccc" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:tint="@color/color_777777"
        android:layout_gravity="center"
        android:src="@drawable/ic_close"/>
</LinearLayout>