<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rly_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_centerInParent="true"
            android:src="@drawable/user_placeholder"
            app:srcCompat="@color/red" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lly_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/very_light_gray"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/settings"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/txt_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/logout"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lly_footer"
        android:layout_below="@+id/rly_header"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/txt_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/txt_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/chat"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/favorite"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <LinearLayout
            android:id="@+id/ll_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/notification"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

            <ImageView
                android:id="@+id/img_count"
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/red_round"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceSmall" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_my_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_order"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

    </LinearLayout>
</RelativeLayout>